--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   min-height: 100vh;
   font-family: Lato, sans-serif;
   font-size: 18px;
+  scroll-behavior: smooth;
 }
 
 .jumbo-header {
@@ -53,23 +54,17 @@ body {
 .jumbo-header a {
   color: white;
   text-decoration: underline;
-  /* text-decoration: none;
-  margin-bottom: 0;
-  border-bottom: 2px solid white; */
-
   text-underline-offset: 8px;
-  /*text-underline-position: auto; */
-  font-size: 3rem;
+  font-size: 2.8rem;
 }
 
 .map {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  /* max-width: 1000px; */
   background-color: #0065a94c;
   align-items: center;
-  margin: auto;
+  margin: 2em auto;
   padding: 0.8em;
 }
 
@@ -80,12 +75,18 @@ body {
 }
 
 #info-section {
-  max-width: 1400px;
+  width: 50em;
+  max-width: 50em;
+  /* max-width: 1200px; */
   margin: auto;
   padding: 20px;
   background-color: #fefefe;
   line-height: 1.52;
   font-size: 24px;
+}
+
+#info-section>ul {
+  list-style: circle;
 }
 
 #info-section>h4 {
@@ -103,6 +104,8 @@ body {
 #info-section section>h1 {
   font-size: 2.4em;
   margin-bottom: 0.4em;
+  font-family: 'Times New Roman', serif;
+  /* line-height: 1; */
 }
 
 #info-section>section>h1>a{
