--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -12,7 +12,7 @@
                     {% for button in site.heroButtons %}
                     <a href="{% if button.permalink != null %} {{ button.permalink | prepend: site.baseurl }} {% else %} {{ button.link }} {% endif %}"
                         class="btn btn-primary waves-effect waves-button waves-light waves-float" {% if button.link
-                        !=null %}target="_blank" {% endif %} {% if button.disabled %}style="background-color: #2d5ba7 !important;color: #fffa; pointer-events: none;" {% endif %} >{{ button.text
+                        !=null %}target="_blank" {% endif %} {% if button.disabled %}style="background-color: #aa9200 !important; pointer-events: none;" {% endif %} >{{ button.text
                         }}</a>
                     {% endfor %}
             </div>
