--- a/_includes/tickets.html
+++ b/_includes/tickets.html
@@ -26,7 +26,7 @@
 					{% if ticketsOffer.soldOut == true %}
 					<span class="button disabled">{{ ticketsOffer.soldOutText }}</span>
 					{% elsif ticketsOffer.disabled != true %}
-					<a class="button" href="{{ ticketsOffer.buyButtonLink }}" target="_blank">{{
+					<a class="button btn-primary" href="{{ ticketsOffer.buyButtonLink }}" target="_blank">{{
 						ticketsOffer.buyButtonText }}</a>
 					{% else %}
 					{% assign ticketValidFrom = ticketsOffer.validFrom | split: "T" %}
