--- a/_sass/partials/_venue.scss
+++ b/_sass/partials/_venue.scss
@@ -52,8 +52,8 @@
 }
 .venue-text {
     padding: 30px 20px;
-    color: #fff;
-    background: $main-color;
+    color: #000;
+    background: #ffc400;
     @media (max-width: 767px) {
         padding: 20px 15px;    
     }
