--- a/_sass/partials/_hero.scss
+++ b/_sass/partials/_hero.scss
@@ -4,7 +4,7 @@
     padding-top: 0;
     .jumbotron {
         position: relative;
-        top: 50%;
+        top: 75%;
         margin: 0;
         left: 0;
         transform: translateY(-60%);
@@ -19,6 +19,11 @@
         }
         .btn {
             margin: 0 3px;
+            background-color: #ffc400 !important;
+        }
+        .btn-primary {
+            color: #000 !important;
+            background-color: #ffc400 !important;
         }
     }
 }
