--- a/_sass/partials/_tickets.scss
+++ b/_sass/partials/_tickets.scss
@@ -12,61 +12,78 @@ $button-background-color-hover: #4d4d4d;
     text-align: center;
     border: 1px $col-border-color solid;
     border-right: none;
+
     @media (max-width: 767px) {
         width: 100% !important;
         border: 1px $col-border-color solid;
     }
+
     &:last-child {
         border-right: 1px $col-border-color solid;
         border-left: none;
+
         @media (max-width: 767px) {
-            border: 1px $col-border-color solid;    
+            border: 1px $col-border-color solid;
         }
     }
+
     &.pricing-col-featured {
         top: -27px;
+
         &:not(:first-child) {
             margin-left: 0;
-            border: solid 1px $primary-color;
+            border: solid 1px #ffc400;
         }
+
         @media (max-width: 767px) {
             top: 0;
         }
+
         .pricing-ribbon {
             background: $primary-color;
         }
+
         .title {
             margin-bottom: 33px;
+
             @media (max-width: 767px) {
                 margin: 0;
             }
         }
+
         .price {
             margin-bottom: 30px;
             color: $primary-color;
         }
+
         .pricing-content {
             padding-top: 2px;
+
             @media (max-width: 767px) {
                 padding: 0;
             }
         }
+
         .button {
             margin-top: 45px;
             background: $primary-color;
+
             &:hover {
-                background: $primary-color-hover;    
+                background: $primary-color-hover;
             }
+
             @media (max-width: 767px) {
                 margin: 0;
             }
+
             &.disabled {
                 &:hover {
                     background: $primary-color;
-                }      
+                }
             }
         }
     }
+
     .title {
         font-size: 32px;
         font-weight: $light;
@@ -74,38 +91,45 @@ $button-background-color-hover: #4d4d4d;
         padding: 20px 0;
         background: $title-background-color;
     }
+
     .price {
         margin: 30px 0 10px;
         padding: 26px 0;
         font-size: 65px;
         font-weight: $light;
-        color: #000;
+        color: #ffc400;
     }
+
     .currency {
         font-size: 32px;
     }
+
     .button {
         font-size: 32px;
         display: block;
         margin-top: 30px;
         padding: 7px 25px 10px;
-        color: #fff;
-        background: $button-background-color;
+        color: #000;
+        background: #ffc400;
         font-weight: $light;
         text-decoration: none;
+
         &:hover {
             background: $button-background-color-hover;
         }
+
         &.disabled {
             &:hover {
                 background: $button-background-color;
-            }      
+            }
         }
+
         &.fallback {
             font-size: 18px;
             line-height: 1.4;
         }
     }
+
     .pricing-ribbon {
         position: absolute;
         top: 10px;
@@ -116,20 +140,33 @@ $button-background-color-hover: #4d4d4d;
         background: $button-background-color;
     }
 }
+
 .pricing-content {
     font-weight: $regular;
+
     ul {
         width: 80%;
         margin: 0 auto;
         margin-top: 16px;
         padding: 0;
     }
+
     li {
         padding: 16px 0;
         list-style: none;
         border-bottom: solid 1px $col-border-color;
+
         &:last-child {
             border-bottom: none;
         }
     }
+}
+
+#tickets .pricing-header>p.price {
+    color: #ffc400 !important;
+}
+
+#tickets .pricing-content .btn-primary {
+    background: #ffc400 !important;
+    color: #000 !important;
 }
