--- a/_sass/partials/_schedule.scss
+++ b/_sass/partials/_schedule.scss
@@ -2,8 +2,20 @@
     margin: auto;
 }
 
-#schedule>h1 {
-    // text-align: center;
+#schedule>p {
+    margin: 2em auto;
+    text-align: center;
+    font-size: 2em;
+    max-width: 650px;
+    line-height: 1.5;
+}
+
+.schedule {
+    margin: 2em auto;
+    max-width: 800px;
+    padding: 0.2em 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .schedule h1 {
@@ -26,10 +38,6 @@
     border-bottom: 1px solid #ccc;
 }
 
-.schedule table tr:last-child {
-    // border-bottom: none;
-}
-
 .schedule table tr td {
     padding: 1em;
 }
@@ -37,6 +45,11 @@
 .schedule table tr td:first-child {
     width: 100px;
 }
+
+.schedule table tr td:last-child {
+    text-align: left;
+}
+
 .schedule table tr td ul {
     list-style-type: none;
     margin: 0;
