--- a/_includes/latest-news.html
+++ b/_includes/latest-news.html
@@ -4,13 +4,22 @@
 		<div class="col-lg-10 col-lg-offset-1">
 			<h3>{{ site.latestNewsTitle }}</h3>
 			<article class="row">
-				{% for post in site.posts limit:2 %}
-                    {% assign postUrl = site.baseurl | append: post.url %} 
-					<div class="post col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInDown" data-delay="500">
-						<h6>{{ post.title }}</h6>
-						<p class="post-body">{{ post.content | strip_html | truncate: 250 }} <a href="{{ postUrl }}">continue reading</a></p>
-					</div>
-                {% endfor %}
+
+				{% for post in site.posts limit: 6 %}
+
+				    {% assign count = 0 %}
+					{% unless post.categories contains "rpgs" %}
+					    {% assign count = count + 1 %}
+						{% unless count <= 2 %}
+		                    {% assign postUrl = site.baseurl | append: post.url %} 
+							<div class="post col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInDown" data-delay="500">
+								<h6>{{ post.title }}</h6>
+								<p class="post-body">{{ post.content | strip_html | truncate: 250 }} <a href="{{ postUrl }}">continue reading</a></p>
+							</div>
+
+					    {% endunless %}
+					{% endunless %}
+				{% endfor %}
 			</article>
 		</div>
 	</div>
