--- a/_sass/partials/_blog.scss
+++ b/_sass/partials/_blog.scss
@@ -1,64 +1,82 @@
 .blog {
-    h3 {
-        margin: 0 0 20px;
-    }
+  h3 {
+    margin: 0 0 20px;
+  }
 }
 .post-section {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 .post {
-    max-width: 750px;
-    margin-bottom: 52px;
-    @media (max-width: 767px) {
-        margin-bottom: 26px;
-    }
-    li {
-        font-size: 15px;
-        line-height: 26px;
-    }
+  max-width: 750px;
+  margin: 0 auto 24px auto;
+  @media (max-width: 767px) {
+    margin-bottom: 26px;
+  }
+  li {
+    font-size: 15px;
+    line-height: 26px;
+  }
 }
 .post-header {
-    height: 20px;
-    margin-top: 20px;
-    font-size: 14px;
-    .published {
-        padding: 0;
-        font-weight: $bold;
+  height: 36px;
+  margin-top: 12px;
+  font-size: 14px;
+  .published {
+    padding: 0;
+    font-weight: $bold;
+  }
+  .publish-date {
+    color: #656565;
+  }
+  .share {
+    padding: 0;
+    text-align: right;
+  }
+  .social-links {
+    li {
+      margin-left: 4px;
     }
-    .publish-date {
-        color: #656565;
-    }
-    .share {
-        padding: 0;
-        text-align: right;
-    }
-    .social-links {
-        li {
-            margin-left: 4px;
-        }
-    }
+  }
 }
 .post-body {
-    margin-top: 19px;
-    h4 {
-        margin-top: 40px;
-    }
-    iframe, img {
-        display: block;
-        margin: 16px 0;
-    }
+  margin-top: 8px;
+  h4 {
+    margin-top: 40px;
+  }
+  iframe,
+  img {
+    display: block;
+    margin: 16px 0;
+  }
 }
 .page-navigation {
-    margin-bottom: 40px;
-    font-weight: $bold;
+  margin-bottom: 40px;
+  font-weight: $bold;
 }
 .comments {
-    margin-top: 26px;
+  margin-top: 26px;
 }
 .pagination {
-    font-size: 14px;
-    margin: 0;
-    .page-number {
-        margin: 0 7px;
-    }
+  font-size: 14px;
+  margin: 0;
+  .page-number {
+    margin: 0 7px;
+  }
 }
+
+.st-content-header {
+  h4 {
+    margin: 1em 0;
+    font-weight: bold;
+    font-size: 14px;
+  }
+}
+
+.st-content-body {
+  margin: 60px 0;
+}
+
+.st-content-body p {
+    font-size: 1.6em;
+    line-height: 1.4;
+  }
