--- a/_sass/partials/_blog.scss
+++ b/_sass/partials/_blog.scss
@@ -81,3 +81,12 @@
     font-size: 1.6em;
     line-height: 1.4;
   }
+
+.st-content-meta {
+  margin: 4em 0;
+}
+
+.st-content-meta td {
+  font-size: 1.4em;
+  padding: 0.125em 1em;
+}
