--- a/_includes/tickets.html
+++ b/_includes/tickets.html
@@ -4,6 +4,8 @@
 		<div class="col-lg-8 col-md-10 col-lg-offset-2 col-md-offset-1">
 			<h3>{{ site.ticketsTitle }}</h3>
 
+			<h4 style="margin-bottom: 60px">Single-Day tickets can be bought at reception on the day</h4>
+
 			{% for ticketsOffer in site.ticketsOffers %}
 			{% assign colWidth = 12 | divided_by: forloop.length %}
 			{% assign check = forloop.index | modulo:2 %}
