--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -48,6 +48,15 @@
                                     <td>
                                         {{ page.exp_level }}
                                     </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Tags
+                                    </td>
+                                    <td>
+                                        {{ page.tags | join " " }}
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
