--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <div class="">
+        <div class="col-md-10 col-sm-10 col-lg-offset-2 col-md-offset-2">
             <h3 style="display: block">LARPS</h3>
 
             <div class="col-lg-8 col-md-10 col-xs-12">
