--- a/_includes/post-entry.html
+++ b/_includes/post-entry.html
@@ -2,9 +2,7 @@
     <a href="{{ site.baseurl | append: post.url }}" title="{{ post.title }}">
         <h4>{{ post.title }}</h4>
     </a>
-    {% if post.category == "rpg" %}
     <div class="post-header">
-        {% if post.category == "rpg" %}
         <div class="published col-md-6 col-xs-6 pull-left">
             {{ post.system }}
 
@@ -15,8 +13,6 @@
             <!-- <span class="caption">Posted:</span>
                                         <span class="publish-date" itemprop="datePublished">{{ post.date | date: "%b %-d, %Y" }}{% if post.author %} • {{ post.author }}{% endif %}{% if post.meta %} • {{ post.meta }}{% endif %}</span> -->
         </div>
-        {% endif %}
-        {% if post.category == "rpg" %}
         <div class="pull-right">
             <ul class="social-links">
                 <li>
@@ -28,9 +24,14 @@
             </ul>
             <br />
         </div>
-        {% endif %}
     </div>
-    {% endif %}
     <p class="post-body">{{ post.content | strip_html | truncate: 350 }} <a
-            href="{{ site.baseurl | append: post.url }}">continue reading</a></p>
+        href="{{ site.baseurl | append: post.url }}">continue reading</a>
+    </p>
+
+    <p class="tags" style="white-space: pre-wrap; text-transform: uppercase; font-size: 1.1em; font-family: monospace;">
+        <!-- first post.tags -->
+        {{ post.tags | join: " " }}
+    </p>
+    
 </article>
