--- a/_includes/staff.html
+++ b/_includes/staff.html
@@ -18,7 +18,7 @@
                 they are working.
             </p>
 
-            <a href="https://docs.google.com/forms/d/1KhoActAW8zzslC1KFQuKiYyo42BUJtRlk04_5cEwYb0/viewform?edit_requested=true" class="btn btn-primary waves-effect waves-button">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWBJRNRnbqJiEdYeJOQLm87mam4LG9W-D1qLnNVJOshaxFNA/viewform?usp=sf_link" class="btn btn-primary waves-effect waves-button">
                 Staff Form
             </a>
         </div>
