--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -19,7 +19,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        By
+                                        Writer:
                                     </td>
                                     <td>
                                         {{ page.author }}
@@ -27,23 +27,23 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        System
+                                        System:
                                     </td>
                                     <td>
                                         {{ page.system }}
                                     </td>
                                 </tr>
-                                <tr>
+                                <!-- <tr>
                                     <td>
                                         Players
                                     </td>
                                     <td>
                                         {{ page.players }}
                                     </td>
-                                </tr>
+                                </tr> -->
                                 <tr>
                                     <td>
-                                        Experience
+                                        Age:
                                     </td>
                                     <td>
                                         {{ page.exp_level }}
@@ -51,10 +51,10 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        Tags
+                                        Content warnings:
                                     </td>
                                     <td>
-                                        {{ page.tags | join " " }}
+                                        {{ page.tags | join ' ' }}
                                     </td>
                                 </tr>
                             </tbody>
