--- a/_layouts/larp.html
+++ b/_layouts/larp.html
@@ -14,6 +14,44 @@
 
                 {% include top-section.html %}
                 <div class="post">
+                    <div class="st-content-header st-content-meta">    
+                        <table>
+                            <tbody>
+                                {% if page.author != nil %}
+                                <tr>
+                                    <td>
+                                        Writer:
+                                    </td>
+                                    <td>
+                                        {{ page.author }}
+                                    </td>
+                                </tr>
+                                {% endif %}
+                                {% if page.exp_level %}
+                                <tr>
+                                    <td>
+                                        Age:
+                                    </td>
+                                    <td>
+                                        {{ page.exp_level }}
+                                    </td>
+                                </tr>
+                                {% endif %}
+
+                                {% if page.tags %}
+                                <tr>
+                                    <td>
+                                        Content warnings:
+                                    </td>
+                                    <td>
+                                        {{ page.tags | join ' ' }}
+                                    </td>
+                                </tr>
+                                {% endif %}
+                            </tbody>
+                        </table>
+                    
+                    </div>
                     <div class="st-content-body">
                         {{ content }}
                     </div>
