--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -4,7 +4,7 @@
         <div class="col-md-10 col-sm-10 col-lg-offset-2 col-md-offset-2 col-sm-offset-1">
             <h3>RPGs</h3>
             <div class="col-lg-8 col-md-10 col-xs-12">
-                {% for post in site.categories.rpg %}
+                {% for post in site.categories.games %}
                 {% unless post.path contains '_archive' %}
                     {% include post-entry.html %}
                 {% endunless %}
@@ -26,6 +26,7 @@
                     </div>
                 </div>
                 {% endif %}
+                <!-- ^above might be useless (up until the endfor) -->
 
                 <!-- <div class="row text-center">
                     <p class="rss-subscribe">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank">via RSS</a>
