--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -4,7 +4,7 @@
         <div class="col-md-10 col-sm-10 col-lg-offset-2 col-md-offset-2 col-sm-offset-1">
             <h3>RPGs</h3>
             <div class="col-lg-8 col-md-10 col-xs-12">
-                {% for post in site.categories.games %}
+                {% for post in site.categories.rpg %}
                 {% unless post.path contains '_archive' %}
                     {% include post-entry.html %}
                 {% endunless %}
