--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="{{ "/js/jquery-2.1.1.min.js " | prepend: site.baseurl }}><\/script>')
     </script>
@@ -79,7 +79,7 @@
         if (typeof ($.fn.modal) === 'undefined') {
             document.write('<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}><\/script>')
         }
-    </script>
+    </script> -->
     <!-- <script src="{{ " /js/default.js" | prepend: site.baseurl }}"></script>
     <script src="{{ " /js/scripts.min.js" | prepend: site.baseurl }}"></script> -->
     {% include schema-event.html %}
