maybe fixing rpg button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,9 @@
 {% include head.html %}
 
 <body>
-    <div id="preloader" class="preloader">
+    <!-- <div id="preloader" class="preloader">
         <div class="loader-gplus"></div>
-    </div>
+    </div> -->
     
     <div id="st-container" class="st-container">
         <div class="st-pusher">
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="{{ "/js/jquery-2.1.1.min.js " | prepend: site.baseurl }}><\/script>')
     </script>
@@ -35,7 +35,7 @@
     <script src="{{ "/js/default.js" | prepend: site.baseurl }}"></script>
     <script>Waves.displayEffect();</script>
     <script src="{{ "/js/scripts.min.js" | prepend: site.baseurl }}"></script>
-    {% include schema-event.html %}
+    {% include schema-event.html %} -->
 </body>
 
 </html>
