--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -82,7 +82,7 @@
     </script> -->
     <!-- <script src="{{ " /js/default.js" | prepend: site.baseurl }}"></script>
     <script src="{{ " /js/scripts.min.js" | prepend: site.baseurl }}"></script> -->
-    {% include schema-event.html %}
+    <!-- {% include schema-event.html %} -->
 </body>
 
 </html>
