--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,6 @@
-{% include navigation.html %}
-
+<a href="/schedule/">Schedule</a>
+<a href="http://warpcon35.conmaps.com/">Map</a>
+<a href="/booklet.pdf">Booklet</a>
 <!-- About Section -->
 <section id="about" class="about">
     <div class="content-wrapper">
