--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
-<a href="/schedule/">Schedule</a>
-<a href="http://warpcon35.conmaps.com/">Map</a>
-<a href="/booklet.pdf">Booklet</a>
+<h2><a href="/schedule/">Schedule</a></h2>
+<h2><a href="http://warpcon35.conmaps.com/">Map</a></h2>
+<h2><a href="/booklet.pdf">Booklet</a></h2>
 <!-- About Section -->
 <section id="about" class="about">
     <div class="content-wrapper">
