--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<h2><a href="/schedule/">Schedule</a></h2>
+<h2><a href="/schedule">Schedule</a></h2>
 <h2><a href="http://warpcon35.conmaps.com/">Map</a></h2>
 <h2><a href="/booklet.pdf">Booklet</a></h2>
 <!-- About Section -->
